# ic-alloy-chainlink

./: .gitignore  README.md  dfx.json  did.sh  index.html  package.json  vite.config.ts
contract/: README.md  foundry.toml  remappings.txt
contract/src/: AssetPriceRegistry.sol
contract/src/lib/: AssetManager.sol  ConversionUtils.sol  PriceFeedUtils.sol  StringUtils.sol
contract/test/: AssetPriceRegistry.t.sol
contract/testjs/: README.md  _safeGetPrice.js  addremove.js  convertalltoken.js  getAllAssetsWithPrices.js  getAssetBySymbol.js  getPriceFeedDetails.js  getTokenAmount.js  getTokenPrice.js  getTokenPriceBySymbol.js  getUsdValue.js  package.json
src/backend/: Cargo.toml  backend.did
src/backend/declarations/: backend.did.d.ts  backend.did.js
src/backend/src/: lib.rs
src/backend/src/service/: convert_tokens.rs  get_all_assets.rs  get_all_assets_with_prices.rs  get_asset_by_symbol.rs  get_price_feed_details.rs  get_token_amount.rs  get_token_price.rs  get_token_price_by_symbol.rs  get_usd_value.rs  mod.rs  safe_get_price.rs
src/backend/src/service/add_remove_asset/: add_asset.rs  get_address.rs  get_balance.rs  remove_asset.rs
src/backend/src/utils/: helper.rs
src/evm_rpc/declarations/: evm_rpc.did  evm_rpc.did.d.ts  evm_rpc.did.js
src/frontend/: App.tsx  actor.tsx  index.css
src/frontend/components/: AddAsset.tsx  AllAssetWithPrice.tsx  AssetList.tsx  ConvertToken.tsx  GetPriceFeedDetails.tsx  GetTokenPriceBySymbol.tsx  RemoveAsset.tsx  SafeGetPrice.tsx  balance.tsx  eth-address.tsx  getAssetBySymbol.tsx  getTokenAmount.tsx  getTokenPrice.tsx  (+5 more)
(+15 files in other folders)
