[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
getrandom = { version = "0.2.15", features = ["custom"] }
ic-cdk-timers = "0.11.0"
serde_bytes = "0.11.15"
serde = { version = "1.0", features = ["derive"] }

# Use local clone of `ic-alloy`
# alloy = { path = "../../../ic-alloy/crates/alloy", default-features = false, features = [
#   "icp",
#   "sol-types",
#   "json",
#   "contract",
# ] }

# Use `ic-alloy` hosted on GitHub. `ic-alloy` is not deployed to crates.io yet
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.1", default-features = false, features = [
  "icp",
  "sol-types",
  "json",
  "contract",
] }

